--- a/loading-screen-config/config.json
+++ b/loading-screen-config/config.json
@@ -17,7 +17,7 @@
     "tips": [
         {
             "icon": "assets/silkicons/lightbulb.png",
-            "text": "Visit our website at https://falloutdecay.com to find the wiki or donate."
+            "text": "Join our discord to vote on what updates should happen next."
         },
         {
             "icon": "assets/silkicons/application_lightning.png",
